# Molara

./: .coderabbit.yaml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  MANIFEST.in  Molara.pyproject  Molara.pyproject.user.e7aede3  README.md  __main__.py  abbreviations.txt  citation.cff  cython_build.py  molara.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: CODEOWNERS
.github/actions/install_linux_dependencies/: action.yml
.github/workflows/: documentation.yml  lint.yml  release.yml  release_win_exe.yml  remarks_testyml.txt  test.yml  test_wheel.yml
Gui/: CrystalDialog.py  cystalstructure_dialog.ui  ui_crystalstructure_dialog.py  ui_form.py
Molecule/: Atom.py  Drawer.py  Molecule.py
MoleculeWidget/: MoleculeWidget.py
Rendering/: Buffers.py  Camera.py  Cylinder.py  Rendering.py  Shaders.py  Sphere.py
Settings/Structure/: Default.json
develop/colors/: get_colors.py
develop/periodic_table/: get_json.py  get_pd_data.py
docs/: MoleculeWidget.rst  Rendering.rst  conf.py  index.rst  modules.rst  molara.rst
docs/source/: conf.py  index.rst
docs/source/dev/: contributing.md  install.rst  reference.rst
docs/source/users/: faq.rst  install.rst  usage.rst
examples/: carbontet.xyz  dna.xyz  pentane.xyz  solution.xyz
examples/POSCAR/: Ba2YCu3O7.poscar  O2_POSCAR  SrTiO3_POSCAR  boron_nitride_cartesian  magnesium_antimonite  magnesium_antimonite_2
examples/POSCAR/Hexagonal/: Nepheline
examples/coord/: coord1.coord  coord2  coord3
examples/molden/: SPDFG_orbitals.molden  benzene.molden  caffeine.molden  h2o.molden  hf.molden  o2.molden
examples/vibration/: struc.xyz
examples/xyz/: ferrocene.xyz  opt.xyz  several_pentanes.xyz  trj.xyz  water.xyz
molara_main/: __main__.py
settings/structure/: default.json
src/: CONTRIBUTING.md
src/molara/: __init__.py  __main__.py
src/molara/Eval/: __init__.py  aos.py  aos.pyx  generate_voxel_grid.pyx  marchingcubes.py  mos.pxd  mos.pyx  octree.py  populationanalysis.py  trianglelookuptable.py
src/molara/Gui/: CrystalDialog.py  TrajectoryDialog.py  __init__.py  builder.cpp  builder.h  builder.py  builder.ui  builder_ui.py  crystal_dialog.py  crystalstructure_dialog.ui  crystalstructure_dialog_ui.py  export_image_dialog.py  export_image_dialog.ui  form.ui  form_ui.py  main_window.py  measuring_tool.ui  measuring_tool_dialog.py  molecule_widget.py  mos_dialog.py  structure_customizer.ui  structure_customizer_dialog.py  structure_widget.py  supercell_dialog.py  supercell_dialog.ui  trajectory.ui  trajectory_dialog.py  trajectory_ui.py  ui_builder.py  ui_crystalstructure_dialog.py  ui_export_image_dialog.py  ui_form.py  ui_measuring_tool.py  ui_mos_dialog.py  ui_structure_customizer.py  ui_supercell_dialog.py  ui_trajectory.py  ui_virtual_rendering_window.py  virtual_rendering_window.py
src/molara/MainWindow/: __init__.py  main_window.py
src/molara/Molecule/: Atom.py  Crystal.py  Drawer.py  Molecule.py  Molecules.py  __init__.py  atom.py  basisset.py  crystal.py  crystals.py  drawer.py  geometry.py  importer.py  io.py  molecule.py  molecules.py  mos.py  structure.py  structures.py
src/molara/MoleculeWidget/: MoleculeWidget.py  __init__.py  molecule_widget.py
src/molara/Rendering/: Buffers.py  Camera.py  Cylinder.py  Rendering.py  Sphere.py  __init__.py  atom_labels.py  buffers.py  camera.py  cylinder.py  cylinder.pyx  matrices.pyx  rendering.py  shaders.py  sphere.py  sphere.pyx
src/molara/Structure/: __init__.py  atom.py  atom_colors.json  basisset.py  crystal.py  crystals.py  drawer.py  molecule.py  molecules.py  mos.py  periodic_table.json  periodic_table.yaml  periodic_table_copyright.txt  structure.py  structures.py
src/molara/StructureWidget/: molecule_widget.py  structure_widget.py
src/molara/Tools/: __init__.py  mathtools.pyx  raycasting.pyx
src/molara/data/: __init__.py  constants.py
src/molara/eval/: __init__.py  aos.pxd  aos.py  aos.pyx  generate_voxel_grid.pyx  marching_squares.py  marchingcubes.py  marchingcubes.pyx  marchingsquares.pyx  mos.pxd  mos.pyx  populationanalysis.py  trianglelookuptable.py  voxel_grid.py
src/molara/gui/: __init__.py  builder.py  crystal_dialog.py  export_image_dialog.py  export_image_dialog.ui  form.ui  isoline_dialog.py  isoline_dialog.ui  main_window.py  measuring_tool_dialog.py  mos_dialog.py  mos_dialog.ui  normalization_dialog.py  normalization_dialog.ui  pda_dialog.py  structure_customizer.ui  structure_customizer_dialog.py  structure_widget.py  supercell_dialog.py  supercell_dialog.ui  surface_3d.py  surface_3d_dialog.py  surface_3d_dialog.ui  trajectory_dialog.py  ui_builder.py  ui_crystalstructure_dialog.py  ui_export_image_dialog.py  ui_form.py  ui_isoline_dialog.py  ui_measuring_tool.py  ui_mos_dialog.py  ui_normalization_dialog.py  ui_structure_customizer.py  ui_supercell_dialog.py  ui_surface_3d_dialog.py  ui_trajectory.py  ui_virtual_rendering_window.py  virtual_rendering_window.py  virtual_rendering_window.ui
src/molara/rendering/: __init__.py  atom_labels.py  billboards.pyx  buffers.py  camera.py  cones.py  cylinder.pyx  cylinders.pyx  framebuffers.py  matrices.pyx  object3d.py  opengl_cython.pxd  polygons.py  rendering.py  rendering_functions.pyx  shaders.py  sphere.pyx  spheres.pyx
src/molara/structure/: __init__.py  atom.py  atom_colors.json  basisset.py  crystal.py  crystals.py  drawer.py  molecularorbitals.py  molecule.py  molecules.py  mos.py  periodic_table.json  periodic_table_copyright  structure.py  structures.py
src/molara/tools/: __init__.py  mathtools.pyx  raycasting.pyx
src/molara/util/: constants.py  exceptions.py  testing.py
tests/camera_files/: camera.json
tests/input_files/molden/: f2.molden  h2_cas.molden
tests/input_files/poscar/: BN_POSCAR_negative_scale  faulty_BN_POSCAR  faulty_BN_cartesian_POSCAR  faulty_Ba2YCu3O7_POSCAR  faulty_Mg3Sb2_POSCAR  faulty_O2_POSCAR  faulty_SrTiO3_POSCAR
tests/input_files/xyz/: pentane_elements_numeric.xyz
tests/molara/: __init__.py  test_gui_and_rendering.py  test_main_program.py
tests/molecule/: test_io.py
(+111 files in other folders)
